# olback.dev

./: .eslintrc.json  .gitignore  .htaccess  .htaccess1  .htmllintrc  404.html  CNAME  Cargo.toml  Projects.json  README.md  Rocket.toml  SampleConfig.toml  SampleMailConfig.toml  SocialMedia.json  about.html  about.php  blog.html  blog.php  cheats.html  clock.html  config.php  contact.html  contact.php  discord.html  downloads.html  downloads.php  emmas.html  end.html  hax.html  index.html  index.html.backup  index.php  links.html  links.php  log4j2.html  log4j2.md  olback.net.conf  old404.html  oldHome.html  package-lock.json  (+11 more)
.circleci/: .sasslintrc  config.yml  config.yml.old  deploy.sh
Konga_files/: show.js
assets/: main.css  main.js  main.min.css  main.min.css.map  main.min.js  main.min.js.map  sample-config.php  styles.css  styles.min.css  test.txt
assets.old/css/: error.css  error.min.css.map  links.css  main.min.css.map
assets.old/js/: main.js  main.min.js.map
css/: 1styles.css  clock.css  form.css  styles.css  styles.min.css  styles2.css  styles3.css  styles_v2.css
img/: Thumbs.db
js/: date-time.js  error.min.js  google.js  jsLog.js  main.js  main.min.js  time.js  troll.js
misc/: 404.html  Konga.html  cat.html  clock.html  end.html  exit.html  joncfg.html  links.html  ruski.html
other/: olback.net.conf
redirects/: ghost.html  yt.html
res/: cfg.html  config-sample.php  config.php  footer.php  head.php  navbar.php
src/: birthday.rs  conf.rs  flash_res.rs  form.rs  mail.rs  mailer.rs  main.rs  projects.rs  raw_redirect.rs  sample.conf.rs  site.rs  social_media.rs  templates.rs
static/: index.html  keybase.txt  links.html  robots.txt  steam.html
static_private/: 404.html  index.html
system_configs/: olback.net.conf  www-data
templates/: error.hbs  error.html.hbs  index.hbs  index.html.hbs
(+53 files in other folders)
