[package]
name = "olback_net"
version = "4.0.0"
authors = ["olback <web@olback.net>"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["handlebars_templates", "json"] }
lettre = "0.9"
lettre_email = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mailchecker = "3.3"
colored = "1.9"
toml = "0.5"
native-tls = "0.2.3"
chrono = "0.4"
csrf = "0.3"
data-encoding = "2.1.2"
rand = "0.7.2"
last-git-commit = "0.1.1"
reqwest = "0.9.22"
openssl = "0.10"
hex = "0.4.0"
